# classic_game_template

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/engine/shaders/dx11/: sprites.hlsl
assets/examples/maps/: sample_indoor.tmx  sample_map.tmx  tower_defense.json
assets/examples/tilesets/: tower_defense.tsx
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  api.h  assets.cpp  assets.h  audio.cpp  audio.h  clock.cpp  clock.h  engine.cpp  engine.h  engine_main.cpp  event_loop.cpp  event_loop.h  external_libs.h  imgui_helper.cpp  imgui_helper.h  input.cpp  input.h  input_helper.cpp  input_helper.h  key_codes.h  map_helpers.cpp  map_helpers.h  math.cpp  math.h  pch.cpp  pch.h  system.cpp  system.h  test.cpp  test.h  tilemap.cpp  tilemap.h  tileset_helper.cpp  tileset_helper.h  ui_bindings.cpp  ui_bindings.h  ui_extensions.cpp  ui_extensions.h  window.cpp  (+1 more)
src/engine/render/: CMakeLists.txt
src/engine/render/core/: CMakeLists.txt  api.h  camera.cpp  camera.h  i_render_context.h  missingno.png.h  pch.h  sprite_draw_list.cpp
src/engine/render/dx11/: CMakeLists.txt  im3d_dx11.cpp  im3d_dx11.h  pch.cpp  pch.h  render_context_dx11.cpp  render_context_dx11.h  util.cpp  util.h
src/examples/: CMakeLists.txt
src/examples/basic/: CMakeLists.txt  basic.cpp
src/examples/tower_defence/: CMakeLists.txt  enemy_data.cpp  enemy_data.h  entities.cpp  entities.h  entity_types.cpp  entity_types.h  game.cpp  game.h  game_session.cpp  game_session.h  game_state.cpp  game_state.h  helper_functions.cpp  helper_functions.h  main.cpp  map_data.cpp  map_data.h  pch.h  projectile_data.cpp  projectile_data.h  tilemap.cpp  tilemap.h  tower_data.cpp  tower_data.h
src/render_core/: CMakeLists.txt  api.h  camera.cpp  camera_simple_ortho.cpp  camera_simple_ortho.h  i_camera.h  i_render_context.h  render_config.cpp  render_config.h  render_queue.cpp  render_queue.h  sprite_draw_list.cpp  sprite_draw_list.h
src/render_dx11/: CMakeLists.txt  im3d_dx11.cpp  im3d_dx11.h  pch.cpp  pch.h  render.cpp  render.h  render_context_dx11.cpp  render_context_dx11.h  system.h  util.cpp  util.h
